--- a/index.html
+++ b/index.html
@@ -19,191 +19,186 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="main-page">
-      <header>
-        <!--Logo-->
-        <div class="container menu-box">
-          <div class="first-menu-box">
-            <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
-            <nav class="menu">
-              <ul class="list box">
-                <li><a class="menu-nav" href="index.html">Agencja</a></li>
-                <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
-                <li><a class="menu-nav" href="/contact">Kontakt</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="second-menu-box">
-            <a class="menu-mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-            <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
-          </div>
+    <header>
+      <!--Logo-->
+      <div class="container menu-box">
+        <div class="first-menu-box">
+          <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
+          <nav>
+            <ul class="list">
+              <li><a class="menu-nav" href="index.html">Agencja</a></li>
+              <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
+              <li><a class="menu-nav" href="/contact">Kontakt</a></li>
+            </ul>
+          </nav>
         </div>
-      </header>
-      <main>
-          <section class="primary">
-               <!--HERO-->
-          <div class="container">
+        <div class="second-menu-box">
+          <a class="menu-mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="primary">
+        <!--HERO-->
+        <div class="container">
           <h1 class="primary-title">
             Efektywne rozwiązania dla waszego biznesu
           </h1>
           <button class="primary-bg" type="button">Zamów usługe</button>
-        </section>
-      </div>
-        <section>
-          <div  class="container">
-          <!--TEKST-->
-          <div class="box">
-            <ul class="list">
-              <div class="feature">
-                <li>
-                  <h3 class="feature-title">Lorem ipsum</h3>
-                  <p class="feature-section">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                  </p>
-                </li>
-                <li>
-                  <h3 class="feature-title">Lorem ipsum</h3>
-                  <p class="feature-section">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                  </p>
-                </li>
-                <li>
-                  <h3 class="feature-title">Lorem ipsum</h3>
-                  <p class="feature-section">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                  </p>
-                </li>
-                <li>
-                  <h3 class="feature-title">Lorem ipsum</h3>
-                  <p class="feature-section">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-                    vel arcu sem. Sed non sodales dui. Interdum et malesuada
-                  </p>
-                </li>
-              </div>
-            </ul>
-          </div>
-        </section>
-        <section class="tender">
-          <!--OFERTA-->
-          <div class="container">
-            <h2 class="tender-title">Czym się zajmujemy</h2>
-            <ul class="list box">
-              <li>
-                <img
-                  src="images/programming.jpg"
-                  alt="pisanie programów"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/mobile-applications.jpg"
-                  alt="tworzenie aplikacji mobilnych"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li>
-                <img
-                  src="images/ux-design.png"
-                  alt="tworzenie z UX designe"
-                  width="370"
-                  height="294"
-                />
-              </li>
-            </ul>
-          </div>
-        </section>
-        <section class="team">
-          <!--ZESPÓŁ-->
-          <div class="container">
-            <h2 class="team-title">Nasz zespół</h2>
-            <ul class="list box">
-              <li class="team-card">
-                <img
-                  src="images/product-designer.jpg"
-                  alt="UśmiechniętymMęższczyzna w okularach z brodą w koszuli"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-job">Product Designer</p>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/frontend-developer.jpg"
-                  alt="Uśmiechnięta kobieta w długich bląd włosach w okularach"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-job">Frontend Developer</p>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/marketing.jpg"
-                  alt="Męszczyzna uśmiechnięty w jasnej koszuli"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-job">Marketing</p>
-              </li>
-              <li class="team-card">
-                <img
-                  src="images/ui-designer.jpg"
-                  alt="Męszczyzna z brodą w okularach w czarnym tiszercie"
-                  width="270"
-                  height="260"
-                />
-                <h3 class="team-name">John Doe</h3>
-                <p class="team-job">UI Designer</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </main>
-      <footer>
-        <div class="contact">
-          <div class="container">
-            <div class="contact-box">
-              <h2 class="logo">
-                <span class="first-part-logo">Web</span
-                ><spon class="secend-part-logo">Studio</spon>
-              </h2>
-            </div>
-            <address>
-              <ul class="contact-list">
-                <li>
-                  <a
-                    class="contact-data"
-                    href="https://goo.gl/maps/quSYSpreMcUmD9Dv7"
-                    target="_blank"
-                    >m. Warszawa, Aleje Jerozolimskie 21
-                  </a>
-                </li>
-                <li>
-                  <a class="contact-mail" href="mailito:info@example.com"
-                    >info@example.com</a
-                  >
-                </li>
-                <li>
-                  <a class="contact-phone" href="tel:+48111111111"
-                    >+48 111 111 111</a
-                  >
-                </li>
-              </ul>
-            </address>
-          </div>
         </div>
-      </footer>
-    </div>
+      </section>
+      <section>
+        <div class="container">
+          <!--TEKST-->
+          <ul class="list feature-box">
+            <li>
+              <h3 class="feature-title">Lorem ipsum</h3>
+              <p class="feature-section">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Lorem ipsum</h3>
+              <p class="feature-section">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Lorem ipsum</h3>
+              <p class="feature-section">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-title">Lorem ipsum</h3>
+              <p class="feature-section">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="tender">
+        <!--OFERTA-->
+        <div class="container">
+          <h2 class="tender-title">Czym się zajmujemy</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="images/programming.jpg"
+                alt="pisanie programów"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/mobile-applications.jpg"
+                alt="tworzenie aplikacji mobilnych"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/ux-design.png"
+                alt="tworzenie z UX designe"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="team">
+        <!--ZESPÓŁ-->
+        <div class="container">
+          <h2 class="team-title">Nasz zespół</h2>
+          <ul class="list">
+            <li class="team-card">
+              <img
+                src="images/product-designer.jpg"
+                alt="UśmiechniętymMęższczyzna w okularach z brodą w koszuli"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-job">Product Designer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/frontend-developer.jpg"
+                alt="Uśmiechnięta kobieta w długich bląd włosach w okularach"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-job">Frontend Developer</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/marketing.jpg"
+                alt="Męszczyzna uśmiechnięty w jasnej koszuli"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-job">Marketing</p>
+            </li>
+            <li class="team-card">
+              <img
+                src="images/ui-designer.jpg"
+                alt="Męszczyzna z brodą w okularach w czarnym tiszercie"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-name">John Doe</h3>
+              <p class="team-job">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="contact">
+        <div class="container">
+          <div class="contact-box">
+            <h2 class="logo">
+              <span class="first-part-logo">Web</span
+              ><spon class="secend-part-logo">Studio</spon>
+            </h2>
+          </div>
+          <address>
+            <ul class="contact-list">
+              <li>
+                <a
+                  class="contact-data"
+                  href="https://goo.gl/maps/quSYSpreMcUmD9Dv7"
+                  target="_blank"
+                  >m. Warszawa, Aleje Jerozolimskie 21
+                </a>
+              </li>
+              <li>
+                <a class="contact-mail" href="mailito:info@example.com"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a class="contact-phone" href="tel:+48111111111"
+                  >+48 111 111 111</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
