--- a/portfolio.html
+++ b/portfolio.html
@@ -19,39 +19,45 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="portfolio-page">
-       <header>
-        <!--Logo-->
-        <div class="container menu-box">
+    <header>
+      <!--Logo-->
+      <div class="container menu-box">
+        <div class="first-menu-box">
           <h2 class="logo"><span class="first-part-logo">Web</span>Studio</h2>
-          <nav class="menu">
-            <ul class="list box">
+          <nav>
+            <ul class="list">
               <li><a class="menu-nav" href="index.html">Agencja</a></li>
               <li><a class="menu-nav" href="portfolio.html">Pordfolio</a></li>
               <li><a class="menu-nav" href="/contact">Kontakt</a></li>
             </ul>
           </nav>
+        </div>
+        <div class="second-menu-box">
           <a class="menu-mail" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
           <a class="menu-phone" href="tel:+48111111111">+48 111 111 111</a>
         </div>
-      </header>
+      </div>
+    </header>
     <main>
       <section class="filter">
-       <div class="container">
-        <!--HERO-->
-          <button class="filter-bg" type="button">Wszystkie</button>
-          <button class="filter-bg" type="button">Strony</button>
-          <button class="filter-bg" type="button">Aplikacje</button>
-          <button class="filter-bg" type="button">Dizajn</button>
-          <button class="filter-bg" type="button">Marketing</button>
-          </div>
-        </section>
-      <section class="portfolio ">
-        <!--Portfolio-->
         <ul class="list container">
-          <div class="portfolio-box">
+          <!--HERO-->
+          <li>
+            <button class="filter-bg" type="button">Wszystkie</button>
+          </li>
+          <li>
+            <button class="filter-bg" type="button">Strony</button>
+          </li>
+          <li><button class="filter-bg" type="button">Aplikacje</button></li>
+          <li><button class="filter-bg" type="button">Dizajn</button></li>
+          <li><button class="filter-bg" type="button">Marketing</button></li>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <!--Portfolio-->
+        <ul class="list container portfolio-box">
           <li class="portfolio-card">
             <img
               src="images/technocrack.jpg"
@@ -142,7 +148,6 @@
             <h3 class="portfolio-name">Growing Business</h3>
             <p class="portfolio-job">Aplikacja</p>
           </li>
-          </div>
         </ul>
       </section>
     </main>
